NoiseChisel: new --pseudoconcomp for connectivity of pseudo-dets
This new option allows specifying what kind of connectivity is used for
identifying pseudo-detections. Until now this option was hard-coded in
NoiseChisel, so it was necessary to allow the user to set any connectivity
they prefer for their dataset.

--- a/NEWS
+++ b/NEWS
@@ -50,6 +50,13 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
      second input. This greatly simplifies the mergining of different table
      columns into one.
 
+  NoiseChisel:
+   --pseudoconcomp: allows setting the connectivity (4 or 8, in a 2D image)
+     to define separate pseudo-detections. If its stronger,
+     pseudo-detections that are touching on the corner will be identified
+     as one. Until this version, this was hard-written into the code and
+     was the weakest connectivity (4-connected in a 2D image).
+
   Library:
     GAL_BLANK_LONG: new macro for the `long' type blank value.
     GAL_BLANK_ULONG: new macro for the `unsigned long' type blank value.
